--- a/index.mjml
+++ b/index.mjml
@@ -16,7 +16,7 @@
     	<mj-section>
         <mj-column>
       		<mj-text font-family="Helvetica" color="#FFF">
-            <a href="https://daniel-tome123.github.io/NewsletterEx1/" target="_blank">
+            <a href="https://daniel-tome123.github.io/NewsletterEx1/index.html" target="_blank">
           		<span>
           			Versão online
           		</span>
